# fretsonfire

./: .gitignore  AGENTS.md  CHANGELOG.md  INSTALL.md  LICENSE.md  MANIFEST.in  Makefile  README.md  changelog.txt  copying.txt  install.txt  pyproject.toml  setup.py  todo.txt
.github/: dependabot.yml
.github/workflows/: continuous-delivery.yml
src/: Cerealizer.py  Config.py  Data.py  Font.py  GameEngine.py  Language.py  Log.py  Mod.py  Network.py  Object.py  Player.py  Session.py  Stage.py  Texture.py  svg2png.py
src/fretsonfire/: Audio.py  AudioTest.py  Camera.py  Cerealizer.py  Collada.py  Config.py  Credits.py  Data.py  Debug.py  DialogTest.py  Dialogs.py  DummyAmanith.py  Editor.py  Engine.py  EngineTest.py  Font.py  FretsOnFire.py  GameEngine.py  GameEngineTest.py  GameResultsScene.py  GameTask.py  Guitar.py  GuitarScene.py  Input.py  Language.py  Lobby.py  Log.py  MainMenu.py  Menu.py  MenuTest.py  Mesh.py  Messages.py  Mod.py  Network.py  NetworkTest.py  Object.py  ObjectTest.py  Player.py  Resource.py  ResourceTest.py  (+31 more)
src/fretsonfire/data/: stage.ini
src/fretsonfire/data/songs/bangbang/: song.ini
src/fretsonfire/data/songs/tutorial/: song.ini
src/fretsonfire/data/translations/: update.py
src/fretsonfire/data/win32/installer/: FretsOnFire.nsi
src/fretsonfire/locale/: fretsonfire.pot
src/fretsonfire/midi/: DataTypeConverters.py  EventDispatcher.py  MidiFileParser.py  MidiInFile.py  MidiInStream.py  MidiOutFile.py  MidiOutStream.py  MidiToText.py  RawInstreamFile.py  RawOutstreamFile.py  __init__.py  constants.py
src/midi/: EventDispatcher.py  MidiInFile.py  RawInstreamFile.py  RawOutstreamFile.py  __init__.py
tests/: conftest.py  test_audio.py  test_engine.py  test_network.py  test_object.py  test_resource.py  test_server.py  test_song.py  test_timer.py
tools/: capture_screenshot.py
