[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "polib>=1.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "fretsonfire"
dynamic = ["version"]
description = "Frets on Fire is a game of musical skill and fast fingers."
readme = {file = "readme.txt", content-type = "text/plain"}
license = "GPL-2.0-or-later"
license-files = ["copying.txt"]
requires-python = ">=3.8"
authors = [
    {name = "Sami Kyöstilä", email = "skyostil@touko.unrealvoodoo.org"},
    {name = "Roberto Romero", email = "roberto@nirae.at"},
]
keywords = ["game", "music", "rhythm", "guitar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "pygame>=2.1",
    "PyOpenGL>=3.1",
    "numpy>=1.20",
    "Pillow>=9.0",
    "pyasyncore>=1.0",
]

[project.optional-dependencies]
tests = [
    "pytest",
]

[project.scripts]
fretsonfire = "fretsonfire.FretsOnFire:main"

[project.urls]
Homepage = "http://www.unrealvoodoo.org"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"fretsonfire" = [
    "data/**/*",
]

[tool.setuptools.cmdclass]
build_py = "fretsonfire._build.BuildPyWithTranslations"
sdist = "fretsonfire._build.SDistWithTranslations"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fretsonfire*"]

[tool.setuptools.dynamic]
version = {attr = "fretsonfire.Version.VERSION"}
